book/tests/snapshots/snapshot__@syntax-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect first_name\n"
input_file: book/tests/prql/syntax-4.prql
---
SELECT
  first_name
FROM
  employees

