book/tests/snapshots/snapshot__run_display_reference_prql@coalesce-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/coalesce-0.prql
---
prql dialect: generic

from orders
derive ( coalesce amount 0 )

