book/tests/snapshots/snapshot__run_display_reference_prql@dates_and_times-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/dates_and_times-1.prql
---
prql dialect:generic

from `orders`
derive should_have_shipped_today = `order_time` < @08:30


