book/tests/snapshots/snapshot__run_display_reference_prql@dates_and_times-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/dates_and_times-3.prql
---
prql dialect:generic

from `projects`
derive first_check_in = `start` + 10days


