book/tests/snapshots/snapshot__run_display_reference_prql@derive-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/derive-0.prql
---
prql dialect:generic

from employees
derive gross_salary = salary + payroll_tax


